# mujoco_kangaroo_sim2sim

./: .gitignore  LICENSE  README.md  pyproject.toml
mujoco_kangaroo_sim2sim/: __init__.py  policy_runner.py  utils.py
mujoco_kangaroo_sim2sim/config/: joints.yaml
mujoco_kangaroo_sim2sim/kangaroo_mujoco/: common.xml  initial_q_pos.csv  kangaroo.xml  kangaroo_fixed_base.xml  scene.xml  scene_fixed.xml
mujoco_kangaroo_sim2sim/kangaroo_mujoco/assets/: Ankle_external_motor.STL  Ankle_external_pendulum.STL  Ankle_external_rod.STL  Ankle_pitch.STL  Ankle_roll.STL  External_ankle_ball.STL  External_butterfly.STL  External_higher_ankle_bar.STL  External_knee_ball.STL  External_lower_ankle_bar.STL  Femour_pitch.STL  Hip_differential_internal_UnivJoint.STL  Hip_differential_internal_cradle.STL  Hip_differential_internal_motor.STL  Hip_differential_internal_rod.STL  Hip_pitch.STL  Hip_roll.STL  Hip_yaw.STL  Knee.STL  Leg_length_short_bars.STL  Leg_length_slidinig_nut.STL  Rear_long_bar.STL  Rear_short_bar.STL  Rear_triangle.STL  Torso.STL  Yaw_motor.STL  Yaw_rod.STL  base_link.STL  kangaroo.collision_assets.xml  kangaroo.left_leg.excluded_contacts.xml  kangaroo.right_leg.excluded_contacts.xml  kangaroo.visual_assets.xml
mujoco_kangaroo_sim2sim/kangaroo_mujoco/constraints/: kangaroo.left_leg.equality_constraints.xml  kangaroo.right_leg.equality_constraints.xml
mujoco_kangaroo_sim2sim/kangaroo_mujoco/controllers/: kangaroo.left_leg.motor_controllers.xml  kangaroo.left_leg.position_controllers.xml  (+4 more)
scripts/: run_policy.py
scripts/policies/: policy_B.pt  policy_C.pt
(+16 files in other folders)
